Создать базу данных для проекта ShareIt. Реализовать функции бронирования и добавления комментариев. Настроить JPA.